Fix <li> text overflow

--- a/src/Teleprompter.css
+++ b/src/Teleprompter.css
@@ -76,6 +76,7 @@ li,
 #sub-line {
 	white-space: nowrap;
 	text-overflow: ellipsis;
+	overflow: hidden;
 }
 
 .hidden {
